<resources>
    <string name="app_name">"زاد الخير "</string>
    <string name="logo">"الحد من هدر الطعام"</string>
    <string name="first_slide_description">ساعدنا في تقليل هدر الطعام والتلوث</string>
    <string name="second_slide_description">لدينا طعام فائض من مطاعم موثوقة</string>
    <string name="third_slide_description">بع  طعامك أو تبرع به للمجتمع مجانا</string>
    <string name="let_get_start">لنبدأ</string>
    <string name="tittle_type_user">هل انت؟</string>
    <string name="association">مؤسسة خيرية</string>
    <string name="consumer">مستهلك</string>
    <string name="restaurant">مطعم</string>
    <string name="phone">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password">هل نسيت كلمة المرور؟</string>
    <string name="login">تسجيل دخول</string>
    <string name="or">او</string>
    <string name="do_not_have_an_account_signup">لا تملك حساب؟ تسجيل</string>
    <string name="sign_in_with">تسجيل ب</string>
    <string name="ForgetPassword">نسيت كلمة المرور</string>
    <string name="Email_or_Phone_number">الايميل أو رقم الجوال</string>
    <string name="Reset">استعادة</string>
    <string name="already_have_account">هل تملك حساب ؟</string>
    <string name="login_here">تسجيل دخول</string>
    <string name="favorite">المفضلة</string>
    <string name="cart">الطلبات</string>
    <string name="profile">الملف الشخصي</string>
    <string name="home">" الرئيسية"</string>
    <string name="userName"> اسم المستخدم</string>
    <string name="Restaurants">المطعام</string>
    <string name="meals">"الوجبات المتاحة "</string>
    <string name="restaurant_name">اسم المطعم</string>
    <string name="address">غزة_مش عارف</string>
    <string name="meals_name">اسم الوجبة</string>
    <string name="price">₪20</string>
    <string name="Favo">مف</string>
    <string name="rite">ضلة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Empty_favourite_list">لا يوجد عناصر مفضلة</string>
    <string name="explore">اكتشف</string>
    <string name="Meal_details">تفاصيل الوجبة</string>
    <string name="Description">الشرح</string>
    <string name="available_items">العناصر المتاحة</string>
    <string name="expiry_date">تاريخ الانتهاء</string>
    <string name="delivery_options">"خيارات التوصيل "</string>
    <string name="pick_up">"استلام من المطعم "</string>
    <string name="payment_options">خيارات الدفع</string>
    <string name="cash">الدفع نقداً عند الاستلام</string>
    <string name="Working_Hours">"ساعات العمل "</string>
    <string name="Add_to_cart">اضف الى السلة</string>
    <string name="ok_meals">تم إضافة الوجبة بنجاح</string>
    <string name="positiv_btn">موافق</string>
    <string name="order">الطلبات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Empty_cart_list">لا توجد طلبات</string>
    <string name="Account">الحساب</string>
    <string name="Others">غيرها</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Edit_Profile">تعديل الملف الشخصي</string>
    <string name="cancel">الغاء</string>
    <string name="name">الاسم</string>
    <string name="Sign_up_to">التسجيل في</string>
    <string name="name_app">زاد الخير</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="aggree">من خلال إنشاء حساب ، فإنك توافق على الشروط والأحكام الخاصة بنا</string>
    <string name="Sign_up">تسجيل</string>
    <string name="Already_have_an_account">هل لديك حساب؟</string>
    <string name="sign_in">قم بتسجيل الدخول</string>
    <string name="address_label">العنوان</string>
    <string name="Enter_Your_Name">ادخل اسمك</string>
    <string name="Enter_your_phone_number">ادخل رقم جوالك</string>
    <string name="Enter_valid_email">ادخل بريد صحيح</string>
    <string name="Enter_your_address_Enter_valid">ادخل عنوانك الصحيح</string>
    <string name="Enter_valid_password">ادخل كلمة مرور صحيحة لا تقل عن 7</string>
    <string name="logInWithEmail">تسجيل الدخول بإستخدام الإيميل...</string>
    <string name="Login_successes">تم عملية تسجيل</string>
    <string name="error_login">خطأ في عملية تسجيل الدخول</string>
    <string name="checkEmail">من فضلك تفقد الايميل ..</string>
    <string name="VerificationMsg">رسالة تفعيل الايميل</string>
    <string name="errorSignUp">خطأ في عملية التسجيل</string>
    <string name="register">تسجيل</string>
    <string name="presses_register">عملية التسجيل...</string>
    <string name="restaurantAddMeals">إضافة وجبة</string>
    <string name="Meals">الوجبات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="OrderMeals">طلبات الوجبات</string>
    <string name="number_of">عدد الطلبات</string>
    <string name="number">10</string>
    <string name="free">مجانا</string>
    <string name="restaurantAddMeal">إضافة وجبة</string>
    <string name="_price">السعر</string>
    <string name="work">السبت      9:00  _ 10:00م  الاحد        9:00  _ 10:00م  الإثنين      9:00  _ 10:00م  الثلاثاء      9:00  _ 10:00م  الأربعاء     9:00  _ 10:00م  الخميس    9:00  _ 10:00م  الجمعة     5:00م _ 10:00م</string>
    <string name="sanabil">سنابل</string>
    <string name="shorma">شاورما</string>
    <string name="sanabil5">5₪</string>
    <string name="sanabil_Khanyones">خانيونس</string>
    <string name="sanabil_moqbrlat">مقبلات</string>
    <string name="changePassword">تغير كلمة المرور</string>
    <string name="CurrentPassword">كلمة المرور الحالية</string>
    <string name="NewPassword">كلمة المرور الجديدة</string>
    <string name="ConfirmPassword">تأكيد كلمة المرور</string>
    <string name="Update">تحديث</string>
    <string name="EditProfile">تعديل الملف الشخصي</string>
    <string name="PrivacyPolicy">سياسة الخصوصية</string>
    <string name="TermsConditions">الشروط والقواعد</string>
    <string name="Logout">تسجيل خروج</string>
    <string name="date">10/8/2022</string>
    <string name="aboutApp">عن التطبيق</string>
    <string name="about1">" هو المكان الذي يبيع فيه مقدمو الطعام فائض الطعام بسعر مخفض للمستهلكين أو يتبرعون للجمعيات الخيرية للمحتاجين."</string>
    <string name="about2">زاد الخير معا لمحاربة هدر الطعام وتغير المناخ وزاد جائع في نفس الوقت</string>
    <string name="terms">
        <b>اهداف التطبيق: </b>
             يهدف لتقديم الفائض من الطعام أو عروض و الطعام الذي قارب على انتهاء صلاحيته, وذلك من أجل الحد من هدر الطعام الفائض عن الحاجة أو الذي شارف على انتهاء صلاحيته ويُخشى أن يهدر.
 تكون وسيلة هذا التطبيق لتنفيذ هذه الأهداف عن طريق التعاقد مع عدد من عدة مطاعم , التي بدورها ستوفر عبر هذا التطبيق وجبات بأسعار أقل للأفراد أو مجانية للجمعيات بدلا من أن يهدر.
ويقوم التطبيق بالتالي بعرض تلك المنتجات الغذائية باسم المطاعم المشاركة وعرض سعر المنتج  بعد عرضه على التطبيق وكذلك عرض تاريخ انتهاء الصلاحية.
ويقوم كل من الأفراد والجمعيات بالتصفح واتصال بالمطعم لطلب المنتج والتوصيل يكون بالاستلام من المطعم.
\n\n
ما سبق جزء لا يتجزأ من موافقتك لسياستنا واهدافنا.
\n\n
يلتزم المطعم بوضع اسم المطعم و لوجو المطعم وتفاصيل التواصل مع المطعم من أيميل وتليفون وكذلك طريقة الدفع والتوصيل كما يتم اضافه تاريخ انتهاء صلاحيه المنتج.
\n\n
يلتزم المطعم  بعرض المنتجات بأسعار أقل من السعر العادي أو مجاناً للجمعيات فقط .
إذ أن هذا هو غرض التطبيق الرئيسي للحد من المهدر من فائض الطعام. عليه أن يلتزم بعرض المنتج واسمه ملحق به, صورة للمنتج إن وجدت, السعر بعد, تاريخ لانتهاء.
\n\n
صحه وسلامه الطعام قبل تاريخ انتهاء الصلاحية  مسؤوليه المطعم مسؤوليه كامله.
\n\n
التسجيل في تطبيقنا , فإنك توافق على تلقي بريد إلكتروني منا. الهدف من خدمة البريد الإلكتروني لدينا هو إبقاء عملائنا وزوارنا على اطلاع دائم بالتحديثات والإصدارات الجديدة .
\n\n
    </string>
    <string name="restaurantEditMeals">تعديل الوجبة</string>
    <string name="restaurant_deleteMeals">حدف الوجبة</string>
    <string name="zad">زاد</string>
    <string name="gaza">غزة</string>
    <string name="zad_phone">0598798589</string>
    <string name="associations">المؤسسات الخيرية</string>


</resources>