<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_lite"
    tools:context=".restaurant.ChangePasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/logo"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/changepass"
        android:scaleType="fitCenter" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/change_pass_et_CurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/CurrentPassword"
        android:inputType="text"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:backgroundTint="@color/background_Fragment"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/change_pass_et_NewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/NewPassword"
        android:inputType="text"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:backgroundTint="@color/forgot"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/change_pass_et_ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/ConfirmPassword"
        android:inputType="text"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:backgroundTint="@color/forgot"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_pass_btn_Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape_dialog_container"
        android:text="@string/Update"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/normal"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@id/addMeals_TableLayout"
        app:layout_constraintStart_toStartOf="@id/addMeals_TableLayout"
        app:layout_constraintTop_toBottomOf="@id/addMeals_TableLayout" />


</androidx.appcompat.widget.LinearLayoutCompat>