<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ForgotPasswordScreen"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:background="@color/forgot">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_logo"
        android:layout_marginTop="@dimen/_20sdp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/Enter_valid_email"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/dark"
        app:hintTextColor="@color/dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetEtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text_shape"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgetResetButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/background_edit_text_shape"
        android:text="@string/Reset"
        android:textSize="@dimen/_19ssp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/forgetLinearLayout"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/login"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>